# python_basic_template

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: plotly_basic_samples.ipynb
requirements/: base.txt  dev.txt
scripts/: prepare_data.py
src/python_basic_template/data_handler/: load_data.py
src/python_basic_template/settings/: logging_provider.py  settings.py
src/python_basic_template/utils/: file_utils.py
