[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "python_basic_template"
version = "0.1.0"
description = "A basic template for python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }


dependencies = [
    "python-dotenv>=1.2.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "ipykernel>=7.3.1",
    "nbformat>=5.10.4",
    "plotly>=6.3.1"
]


[project.optional-dependencies]
dev = [
  "rich>=14.2.0"
]

prod = [
  "gunicorn>=20.1.0"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]
include = ["python_basic_template*"]

